[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = { git = "https://github.com/CeciliaZ030/blst.git", branch = "serialize" }
sha2 = { version = "0.10.6", default-features = false }
num_cpus = { version = "1.16.0", optional = true }
rayon = { version = "1.8.0", optional = true } 
threadpool = { version = "^1.8.1", optional = true }
siphasher = { version = "1.0.0", default-features = false }
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"

[features]
default = [
    "std",
]
parallel = [
    "std",
    "dep:rayon",
    "dep:num_cpus",
    "dep:threadpool"
]
std = [
    "sha2/std",
    "siphasher/std"
]
rand = []
arkmsm = []
bgmw = []
